--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   smooth_page_indicator: ^1.2.0+3
+  intl_phone_field: ^3.2.0
   go_router: ^14.6.2
   flutter_svg: ^2.0.16
   flutter_bloc: ^8.1.6
