--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,13 +30,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  #firebase dependencies
+  firebase_core: ^3.9.0
+  firebase_auth: ^5.3.4
+
+  dartz: ^0.10.1
+  go_router: ^14.6.2
+  flutter_bloc: ^8.1.6
   smooth_page_indicator: ^1.2.0+3
   intl_phone_field: ^3.2.0
-  go_router: ^14.6.2
   flutter_svg: ^2.0.16
-  flutter_bloc: ^8.1.6
   dio: ^5.7.0
-#  shared_preferences: ^2.3.3
+
+  # Local Storage
+  # shared_preferences: ^2.3.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
