--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   intl_phone_field: ^3.2.0
   flutter_svg: ^2.0.16
   dio: ^5.7.0
+  flutter_localizations:
+    sdk: flutter
 
   # Local Storage
   # shared_preferences: ^2.3.3
@@ -117,3 +119,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+flutter_intl:
+  enabled: true
