--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   smooth_page_indicator: ^1.2.0+3
   intl_phone_field: ^3.2.0
   flutter_svg: ^2.0.16
+  top_snackbar_flutter: ^3.1.0
+  flutter_progress_hud: ^2.0.2
+  hero_animation: ^1.1.4
   dio: ^5.7.0
   flutter_localizations:
     sdk: flutter
