--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   #firebase dependencies
   firebase_core: ^3.9.0
   firebase_auth: ^5.3.4
+  cloud_firestore: ^5.6.1
 
   dartz: ^0.10.1
   go_router: ^14.6.2
