--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,9 @@ dependencies:
   intl_phone_field: ^3.2.0
   flutter_svg: ^2.0.16
   top_snackbar_flutter: ^3.1.0
+  persistent_bottom_nav_bar_v2: ^5.3.1
   flutter_progress_hud: ^2.0.2
+  skeletonizer: ^1.4.3
   hero_animation: ^1.1.4
   dio: ^5.7.0
   flutter_localizations:
