--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   skeletonizer: ^1.4.3
   hero_animation: ^1.1.4
   dio: ^5.7.0
+  json_annotation: ^4.9.0
   flutter_localizations:
     sdk: flutter
 
@@ -62,6 +63,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.4.14
+  json_serializable: ^6.9.3
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -84,6 +87,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/icons/
 
   # assets:
   #   - images/a_dot_burr.jpeg
