--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,8 +49,8 @@ dependencies:
   skeletonizer: ^1.4.3
   hero_animation: ^1.1.4
   dio: ^5.7.0
+  flutter_rating_bar: ^4.0.1
   get_it: ^8.0.3
-  json_annotation: ^4.9.0
   flutter_localizations:
     sdk: flutter
 
@@ -64,8 +64,6 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^2.4.14
-  json_serializable: ^6.9.3
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
