--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   hero_animation: ^1.1.4
   dio: ^5.7.0
   flutter_rating_bar: ^4.0.1
+  readmore: ^3.0.0
+  youtube_player_flutter: ^9.1.1
   get_it: ^8.0.3
   flutter_localizations:
     sdk: flutter
