--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: movie_app
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -28,61 +28,47 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cached_network_image: ^3.3.0
+  cloud_firestore: ^5.6.1
+  cupertino_icons: ^1.0.8
+  dartz: ^0.10.1
+  dio: ^5.7.0
+  equatable: ^2.0.5
+  firebase_auth: ^5.3.4
+  firebase_core: ^3.9.0
   flutter:
     sdk: flutter
-
-  #firebase dependencies
-  firebase_core: ^3.9.0
-  firebase_auth: ^5.3.4
-  cloud_firestore: ^5.6.1
-
-  dartz: ^0.10.1
-  go_router: ^14.6.2
   flutter_bloc: ^9.0.0
-  smooth_page_indicator: ^1.2.0+3
-  intl_phone_field: ^3.2.0
-  flutter_svg: ^2.0.16
-  top_snackbar_flutter: ^3.1.0
-  persistent_bottom_nav_bar_v2: ^5.3.1
-  flutter_progress_hud: ^2.0.2
-  cached_network_image: ^3.3.0
-  skeletonizer: ^1.4.3
-  hero_animation: ^1.1.4
-  dio: ^5.7.0
-  
-  flutter_rating_bar: ^4.0.1
-  readmore: ^3.0.0
-  youtube_player_flutter: ^9.1.1
-  get_it: ^8.0.3
-  equatable: ^2.0.5
   flutter_localizations:
     sdk: flutter
-
-  # Local Storage
-  # shared_preferences: ^2.3.3
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+  flutter_progress_hud: ^2.0.2
+  flutter_rating_bar: ^4.0.1
+  flutter_svg: ^2.0.16
+  get_it: ^8.0.3
+  go_router: ^14.6.2
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  intl_phone_field: ^3.2.0
+  loop_page_view: ^1.2.5
+  persistent_bottom_nav_bar_v2: ^5.3.1
+  readmore: ^3.0.0
   shared_preferences: ^2.5.2
+  skeletonizer: ^1.4.3
+  smooth_page_indicator: ^1.2.0+3
+  top_snackbar_flutter: ^3.1.0
+  youtube_player_flutter: ^9.1.1
 
 dev_dependencies:
+  build_runner: ^2.4.15
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  hive_generator: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -96,19 +82,15 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/to/asset-from-package
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-
   fonts:
     - family: Cairo
       fonts:
@@ -129,7 +111,6 @@ flutter:
           weight: 600
         - asset: assets/fonts/montserrat/Montserrat-Bold.ttf
           weight: 700
-
   # fonts:
   #   - family: Schyler
   #     fonts:
