--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_dotenv: ^5.2.1
   flutter_localizations:
     sdk: flutter
+  flutter_native_splash: ^2.4.5
   flutter_progress_hud: ^2.0.2
   flutter_rating_bar: ^4.0.1
   flutter_svg: ^2.0.16
