--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   cloud_firestore: ^5.6.1
   cupertino_icons: ^1.0.8
   dartz: ^0.10.1
+  device_preview: ^1.2.0
   dio: ^5.7.0
   equatable: ^2.0.5
   firebase_auth: ^5.3.4
@@ -25,6 +26,7 @@ dependencies:
   flutter_native_splash: ^2.4.5
   flutter_progress_hud: ^2.0.2
   flutter_rating_bar: ^4.0.1
+  flutter_screenutil: ^5.9.3
   flutter_svg: ^2.0.16
   get_it: ^8.0.3
   go_router: ^14.6.2
@@ -55,6 +57,7 @@ flutter:
   assets:
     - .env
     - assets/
+    - assets/onboarding/
     - assets/icons/
 
   fonts:
