fix: ensure Flutter channel is set to 'stable' in Fastlane workflow

--- a/.github/android_fastlane_firebase_app_distribution_workflow.yaml
+++ b/.github/android_fastlane_firebase_app_distribution_workflow.yaml
@@ -22,6 +22,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.29.0'
+          channel: 'stable'
 
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
