--- a/.github/android_fastlane_firebase_app_distribution_workflow.yml
+++ b/.github/android_fastlane_firebase_app_distribution_workflow.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: 'stable'
+          channel: 'stable'
 
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
