--- a/.github/workflows/android_fastlane_firebase_app_distribution_workflow.yml
+++ b/.github/workflows/android_fastlane_firebase_app_distribution_workflow.yml
@@ -33,6 +33,8 @@ jobs:
       - name: Build Android App
         env:
           FIREBASE_CLI_TOKEN: ${{ secrets.FIREBASE_CLI_TOKEN }}
+          API_KEY: ${{ secrets.API_KEY }} 
+
         run: |
           bundle exec fastlane distribute_to_firebase
         working-directory: android
